Fixed dark mode

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 .components-container{
+    overflow-y: scroll;
     height: 100vh;
     padding: 1.5rem;
 }
@@ -10,4 +11,31 @@
     // app-dictionary-main{
         
     // }
+}
+
+
+
+@media only screen and (min-width: 768px) {
+    .components-container{
+        height: 100vh;
+        padding: 3rem 20rem 2rem 20rem;
+    }
+    .heading-l{
+    font-size: 4rem;
+    line-height: 72px;
+    font-weight: bold;
+}
+.heading-m{
+    font-size: 1.5rem;
+    line-height: 29px;
+}
+.heading-s{
+    font-size: 20px;
+    line-height: 24px;
+}
+.body-m{
+    padding: 0 ;
+    font-size: 18px;
+    line-height: 24px;
+}
 }
