--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -1,24 +1,1 @@
-.search-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 48px;
-    border: 2px solid var(--grey-level-2);
-    border-radius: 1rem;
-    background-color: var(--grey-level-1);
-    padding: 0 16px;
-    
-    input{
-        height: 55px;
-        border: none;
-        background-color: transparent;
-        font-weight: bold;
-    }
-    input:focus{
-        outline: none;
-    }
-}
 
-.search-container:hover input{
-    width: 100%;
-}
